[package]
name = "gen_mcf_macro"
version = "0.1.0"
edition = "2024"

authors = ["lino <lino_snsalias@outlook.com>"]
repository = "https://github.com/ljsnogard/gen_mcf_macro.rs"
keywords = []
categories = ["no-std"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = """
Macro to generate codes and types needed to implement `Future` and `TrMayCancel`
in a pattern that supports graceful cancellation in async programming.
"""

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "parsing"] }
quote = "1"
proc-macro2 = "1"
